--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
   <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 </head>
 <body>
-<h1 id="home"><img style='height:70px;width:70px;margin-bottom:-14px;display:inline;' src='https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Oakland.svg/562px-Oakland.svg.png'></img><a id="home" href="/">OAKLAND</a></h1>
+<h1 id="home"><img style='height:70px;width:70px;margin-bottom:-14px;display:inline;' src='http://i.imgur.com/oWv1lPw.png?1'></img><a id="home" href="/">OAKLAND</a></h1>
 <a id='about' href='about.html'>about</a>
 <div>{{content}}</div>
 </body>
