add logo to about

--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
 <p>
 <hr>
 Inspired by <a href='https://twitter.com/tmcw'>@tmcw</a>'s <a href='http://www.macwright.org/2014/08/11/dctn.html'>dctn</a> and <a href='https://twitter.com/drdemsyn'>@drdemsyn</a>'s <a href='http://chs-tonight.com/'>chs-tonight</a>.
+
+<img style="width:50%;padding-left:25%;padding-top:50px" src='http://i.imgur.com/oWv1lPw.png?1'>
 </div>
 </body>
 </html>
