caps title on about page

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="site.css">
 </head>
 <body>
-<h1 id="home"><a id="home" href="/">Oakland Tonight</a></h1>
+<h1 id="home"><a id="home" href="/">OAKLAND TONIGHT</a></h1>
 <div>Oakland Tonight is an automated event scraper written by <a href='https://twitter.com/morganherlocker'>@morganherlocker</a> for tracking shows and other happenings in Oakland, CA. 
 <p>
 <hr>
