MIT license in about

--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
 <h1 id="home"><a id="home" href="/">OAKLAND TONIGHT</a></h1>
 <div>Oakland Tonight is an automated event scraper written by <a href='https://twitter.com/morganherlocker'>@morganherlocker</a> for tracking shows and other happenings in Oakland, CA. 
 <p>
+
+<a href="https://github.com/morganherlocker/oakland-tonight/">Oakland Tonight is Open Source</a> under an MIT License.
+<p>
 <hr>
 Inspired by <a href='https://twitter.com/tmcw'>@tmcw</a>'s <a href='http://www.macwright.org/2014/08/11/dctn.html'>dctn</a> and <a href='https://twitter.com/drdemsyn'>@drdemsyn</a>'s <a href='http://chs-tonight.com/'>chs-tonight</a>.
 
