normalize headers x-browser

--- a/template.html
+++ b/template.html
@@ -15,7 +15,7 @@
 </script>
 </head>
 <body>
-<h1 id="home"><a id="home" href="/"><img id='logo' src='http://i.imgur.com/oWv1lPw.png?1'></img>OAKLAND</a></h1>
+<h1 id="home"><a id="home" href="/"><img id='logo' src='logo.png'></img>OAKLAND</a></h1>
 <a id='about' href='about.html'>about</a>
 <div>{{content}}</div>
 </body>
